swig: bump to 4.2.0

--- a/swig/Makefile
+++ b/swig/Makefile
@@ -7,19 +7,19 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=swig
-PKG_VERSION:=4.1.0
-PKG_RELEASE:=b2
+PKG_VERSION:=4.2.0
+PKG_RELEASE:=1
 
-#PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-#PKG_SOURCE_URL:=@SF/$(PKG_NAME)
-#PKG_HASH:=d53be9730d8d58a16bf0cbd1f8ac0c0c3e1090573168bfa151b01eb47fa906fc
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=@SF/$(PKG_NAME)
+PKG_HASH:=261ca2d7589e260762817b912c075831572b72ff2717942f75b3e51244829c97
 
-PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/swig/swig.git
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=d22b7dfaea1f7abd4f3d0baecc1a1eddff827561
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-PKG_MIRROR_HASH:=6eef69f05eadbe6848ad8425a5cfed3736f0533e7dc8ca25ddf84bb018dc956f
+#PKG_SOURCE_PROTO:=git
+#PKG_SOURCE_URL:=https://github.com/swig/swig.git
+#PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+#PKG_SOURCE_VERSION:=d22b7dfaea1f7abd4f3d0baecc1a1eddff827561
+#PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
+#PKG_MIRROR_HASH:=6eef69f05eadbe6848ad8425a5cfed3736f0533e7dc8ca25ddf84bb018dc956f
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-3.0-or-later
